Add BG & Padding

--- a/index.html
+++ b/index.html
@@ -4,20 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favorite Things</title>
+    <style> 
+    body{
+        background-image: url('background.jpg');
+        overflow:hidden;
+    }
+    h1 {text-align: center; color: white} 
+    ul1 {position: relative; left: 1900px; top: 90px; color: white}
+    h4 {position:relative; left:1900px; top: 110px; color: white}
+    p1 {position: relative; top: 20px; color: white}
+    ul2 {position: relative; top: 20px; color: white}
+    h3 {text-align: center; position: relative; bottom: 220px; color:white}
+    ol1 {text-align: center; position: relative; bottom: 239px; color: white}
+    </style>
 </head>
+
 <body>
     <h1>This idiots favorite things</h1>
     
     <h4>Favorite Games</h4>
-    <ul>
+    <ul1>
         <li>Project Sekai
         </li>
         <li>Sound Voltex</li>
         <li>Ultrakill</li>
-    </ul>
+    </ul1>
 
-    <h2><em><strong>E</strong></em></h2>
-    <p>Favorite foods</p>
+   
+    <p1><em>Favorite foods</em></p1>
+    <ul2>
     <li>Ice cream</li>
     <li>Ice cream</li>
     <li>Ice cream</li>
@@ -29,21 +44,18 @@
     <li>Ice cream</li>
     <li>Ice cream</li>
     <li><strong>Ice cream</strong></li>
+    </ul2>
 
-
-    <p>this is <em>Italics</em>, it puts an <em>EMPHASIS</em> on things</p>
 
     <h3>Top 5 Numbers</h3>
 
-    <ol>
+    <ol1>
         <li>1</li>
         <li>2</li>
         <li><em>3</em></li>
         <li>17.6372727458994919932488432904328903690532091289189040450932448904590532</li>
         <li>3.1415926535</li>
-    </ol>
+    </ol1>
 
-
-    <h2> this is so cursed lol</h2>
 </body>
 </html>
