--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <h1>This idiots favorite things</h1>
+    <h1><em>This Idiots Favorite Things</em></h1>
     
     <h4>Favorite Games</h4>
     <ul1>
@@ -31,7 +31,7 @@
     </ul1>
 
    
-    <p1><em>Favorite foods</em></p1>
+    <p1>Favorite Foods</p1>
     <ul2>
     <li>Ice cream</li>
     <li>Ice cream</li>
