Fixed some sizing issues

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         overflow:hidden;
     }
     h1 {text-align: center; color: white} 
-    ul1 {position: relative; left: 1900px; top: 90px; color: white}
-    h4 {position:relative; left:1900px; top: 110px; color: white}
-    p1 {position: relative; top: 20px; color: white}
-    ul2 {position: relative; top: 20px; color: white}
-    h3 {text-align: center; position: relative; bottom: 220px; color:white}
-    ol1 {text-align: center; position: relative; bottom: 239px; color: white}
+    ul1 {position: relative; left: 93%; top: 6em; color: white}
+    h4 {position:relative; left: 93%; top: 7em; color: white}
+    p1 {position: relative; top: 2em; color: white}
+    ul2 {position: relative; top: 2em; color: white}
+    h3 {text-align: center; position: relative; bottom: 12em; color:white}
+    ol1 {text-align: center; position: relative; bottom: 15em; color: white}
     </style>
 </head>
 
